src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Open_Hours__c</fullName>
        <formula>left(right(TEXT( CreatedDate ),9),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(CreatedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(CreatedDate))&gt;9,TEXT(MONTH(datevalue(CreatedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Year_Week__c</fullName>
        <formula>TEXT(MOD(FLOOR( (DATEVALUE(CreatedDate) - DATEVALUE(&quot;2006-01-01&quot; ))/7),52)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Year-Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Case_Type__c</fullName>
        <description>Picklist for Operational support case assignment options ( top level )</description>
        <label>Operational Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash and Payments</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>ISA Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Support_Sub_Type__c</fullName>
        <description>Sub type options for operational support escalation</description>
        <label>Operational Support Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account closure</fullName>
                </value>
                <value>
                    <fullName>Account update</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc payment</fullName>
                </value>
                <value>
                    <fullName>Bad debt</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy / Liquidation</fullName>
                </value>
                <value>
                    <fullName>Bank Statement</fullName>
                </value>
                <value>
                    <fullName>Billing breakdown</fullName>
                </value>
                <value>
                    <fullName>Business account set up</fullName>
                </value>
                <value>
                    <fullName>Cheque investment</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Death certificate received</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Equifax address query</fullName>
                </value>
                <value>
                    <fullName>Executor information</fullName>
                </value>
                <value>
                    <fullName>Grant of probate received</fullName>
                </value>
                <value>
                    <fullName>ISA error</fullName>
                </value>
                <value>
                    <fullName>ISA Manager query</fullName>
                </value>
                <value>
                    <fullName>Monthly withdrawal</fullName>
                </value>
                <value>
                    <fullName>New loan query</fullName>
                </value>
                <value>
                    <fullName>Other (Requires a comment)</fullName>
                </value>
                <value>
                    <fullName>Password reset</fullName>
                </value>
                <value>
                    <fullName>POA/ COP</fullName>
                </value>
                <value>
                    <fullName>Repayment query</fullName>
                </value>
                <value>
                    <fullName>Report of passing</fullName>
                </value>
                <value>
                    <fullName>Request repayment</fullName>
                </value>
                <value>
                    <fullName>Statement request</fullName>
                </value>
                <value>
                    <fullName>Transfer form request</fullName>
                </value>
                <value>
                    <fullName>Transfer query</fullName>
                </value>
                <value>
                    <fullName>Trust account set up</fullName>
                </value>
                <value>
                    <fullName>Weekly transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for Operational Support labelling</description>
        <label>Operational Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_hours__c</fullName>
        <formula>If(MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 6), 7)&lt; 2, true,


if( value(Open_Hours__c) &gt; 16, True, if( value(Open_Hours__c) &lt; 8, True, False)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_Calls_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outbound Calls Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_End_Date__c</fullName>
        <label>Payment Plan End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Start_Date__c</fullName>
        <label>Payment Plan Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_With__c</fullName>
        <label>Payment Plan With</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMA</fullName>
                </value>
                <value>
                    <fullName>Zopa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poor_Tech_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Poor Tech Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positive Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Sub_Process__c</fullName>
        <label>Previous Sub-Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessDayCounterV2__c</fullName>
        <description>Version 2 of process day counter</description>
        <formula>NOW()- Loan__r.ArrearsStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This should improve reliability</inlineHelpText>
        <label>ProcessDayCounterV2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Day_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Process Day Counter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Recoveries</fullName>
                </value>
                <value>
                    <fullName>Sensitive Customers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuickPay__c</fullName>
        <formula>Loan_Application__r.QuickPay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuickPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repayment_Script_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the repayment day change script read appropriately</description>
        <label>Repayment Change Script Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Review Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Achieved__c</fullName>
        <formula>IF( Due_Date__c &gt;  ClosedDate , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Flag_CS__c</fullName>
        <formula>CASE(1, 
If(ISPICKVAL(Status,&quot;New&quot;),1,0), 
IMAGE(&quot;/resource/STNew&quot;,&quot;New&quot;,20,20), 
If(ISPICKVAL(Status,&quot;Assigned&quot;),1,0), 
IMAGE(&quot;/resource/STAssigned&quot;,&quot;Assigned&quot;,20,20), 
If(ISPICKVAL(Status,&quot;Pending&quot;),1,0),   
IMAGE(&quot;/resource/STPending&quot;,&quot;Pending&quot;,20,20), 
If(ISPICKVAL(Status,&quot;With Tech&quot;),1,0), 
IMAGE(&quot;/resource/STTech&quot;,&quot;With Tech&quot;,20,20), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;None&quot;,20,20) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Flag_Col__c</fullName>
        <formula>CASE(1, 
If( ISPICKVAL(Origin, &quot;Tech Support Email&quot;)  ,1,0), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;STBlank&quot;,45,450),
If( ISPICKVAL(Origin, &quot;Manual Case&quot;)  ,1,0), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;STBlank&quot;,45,450), 
If( ISPICKVAL(Origin, &quot;Zopian.IT&quot;)  ,1,0), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;STBlank&quot;,45,450),
If( ISPICKVAL(Origin, &quot;Appsupport.IT&quot;)  ,1,0), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;STBlank&quot;,45,450),
If( ISPICKVAL(Origin, &quot;Data.IT&quot;)  ,1,0), 
IMAGE(&quot;/resource/STBlank&quot;,&quot;STBlank&quot;,45,450),
IMAGE(&quot;/resource/CustomerRecord&quot;,&quot;Customer Record&quot;,45,450) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerRecord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Communication_Until__c</fullName>
        <label>Stop Communication Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Process__c</fullName>
        <label>Sub-Process</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Early Arrears</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Promise to Pay</fullName>
                </value>
                <value>
                    <fullName>Financial Difficulties</fullName>
                </value>
                <value>
                    <fullName>Debit Relief Order</fullName>
                </value>
                <value>
                    <fullName>Protected Trust Deed</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>IVA</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Vunerable Customer</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>Pre-Litigation</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Sensitive Case</fullName>
                </value>
                <value>
                    <fullName>Pre-Default</fullName>
                </value>
                <value>
                    <fullName>Ready for Default</fullName>
                </value>
                <value>
                    <fullName>Back From DCA</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Need to Contact</fullName>
                </value>
                <value>
                    <fullName>Enforcement Action Commenced</fullName>
                </value>
                <value>
                    <fullName>Judgement obtained</fullName>
                </value>
                <value>
                    <fullName>Judgement requested</fullName>
                </value>
                <value>
                    <fullName>New Recoveries</fullName>
                    <default>true</default>
                    <label>New Recoveries</label>
                </value>
                <value>
                    <fullName>Arrangement Default</fullName>
                </value>
                <value>
                    <fullName>Arrangement Expired</fullName>
                </value>
                <value>
                    <fullName>Litigation Review</fullName>
                </value>
                <value>
                    <fullName>Not Suitable to be Sued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Access__c</fullName>
        <label>System Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Systems</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Task Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_First_Response_Time__c</fullName>
        <label>Tech First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triggered_Referral_Codes__c</fullName>
        <label>Triggered Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underwriter_Approve_Date__c</fullName>
        <label>Underwriter Approve Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UnderwritingAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows when a case has been assigned via Underwriting rules</description>
        <label>UnderwritingAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lender</fullName>
                    <color>#66E9BD</color>
                    <label>Lender</label>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                    <color>#78C953</color>
                    <label>Borrower</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <color>#AFCADF</color>
                    <label>Internal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UwCaseType__c</fullName>
        <description>Field to pick up which kind of Underwriting case, a case is, based upon the assignment rule used</description>
        <formula>IF( CasePrepAssignment__c = TRUE, &quot;Case Prep&quot;, IF (  FraudCaseAssignment__c = TRUE, &quot;Fraud case&quot;, IF ( UnderwritingAssignment__c = TRUE, &quot;Underwriting Case&quot;, &quot;Not Underwriting&quot; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UwCaseType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Emailing_Person_Account__c</fullName>
        <description>This field is a copy of Customer Email(Person Account) to allow email notification from workflow</description>
        <label>Workflow Emailing Person Account</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>documentsLastUploadedDate__c</fullName>
        <description>This field shows, the date documents were last updated on an underwriting case ( loan application )</description>
        <formula>Loan_Application__r.Documents_Last_Updated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this to prioritise by documents uploaded date</inlineHelpText>
        <label>documentsLastUploadedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>powerOfOneCases__c</fullName>
        <description>Will allow for a case to show as one single entry on a report</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is useful for reporting and analysis</inlineHelpText>
        <label>powerOfOneCases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllCasesWithCollectionsAgentOwners</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Process__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>ArrearsRatio__c</columns>
        <columns>Process_Day_Counter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>equals</operation>
            <value>Collections &amp; Recoveries</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Priority,Hold,Contact,Default,Sensitive,Recoveries,Litigation,Deceased,CleanUp</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>data</value>
        </filters>
        <label>All Collections Cases (Agent)</label>
        <sharedTo>
            <role>Collections_and_Recoveries_Team_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Collection_Cases</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Process__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>ArrearsRatio__c</columns>
        <columns>Process_Day_Counter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>equals</operation>
            <value>Collections &amp; Recoveries</value>
        </filters>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Collections</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Collections priority,early arrears priority</value>
        </filters>
        <label>All Collection Cases (Queue)</label>
        <sharedTo>
            <roleAndSubordinates>Collections</roleAndSubordinates>
            <roleAndSubordinates>Collections_and_Recoveries_Team_Lead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <role>Complaints</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Tech_Operations_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Underwriting_Queues</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>documentsLastUploadedDate__c</columns>
        <columns>First_Time_Picked__c</columns>
        <columns>Broker__c</columns>
        <columns>QuickPay__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Automatic_Cancel_Date__c</columns>
        <columns>Loan_Application__c</columns>
        <columns>NVM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Fraud</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Underwriter</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>TrueConnectivity</value>
        </filters>
        <label>All Queues (UW + Fraud)</label>
        <sharedTo>
            <roleAndSubordinates>UW_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arrangement_Expired</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ActivePPlan__c</columns>
        <columns>DefaultInAdmin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Process__c</field>
            <operation>equals</operation>
            <value>Arrangement Expired</value>
        </filters>
        <label>Arrangement Expired</label>
        <sharedTo>
            <role>Collections_Temporary_Agent</role>
            <role>Collections_and_Recoveries_Team_Lead</role>
            <role>Complaints</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arrangements_Broken_Arrangement</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ActivePPlan__c</columns>
        <columns>DefaultInAdmin__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Sub_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Process__c</field>
            <operation>equals</operation>
            <value>Broken Repayment Arrangement,Arrangement Default</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Process__c</field>
            <operation>notEqual</operation>
            <value>Recoveries</value>
        </filters>
        <label>Arrangements Broken Arrangement</label>
        <sharedTo>
            <roleAndSubordinates>Collections</roleAndSubordinates>
            <roleAndSubordinates>Collections_and_Recoveries_Team_Lead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Ardent</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>AccountDCA__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ArrearsRatio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountDCA__c</field>
            <operation>equals</operation>
            <value>Ardent</value>
        </filters>
        <label>Assigned to Ardent</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Auto_Priority_1_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Auto Priority 1</label>
        <queue>Auto_Priority_1</queue>
        <sharedTo>
            <role>Fraud_Underwriter</role>
            <role>UW_Manager</role>
            <role>UW_Team_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Borrowers_Case</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Status_Flag_CS__c</columns>
        <columns>Call_Reason__c</columns>
        <columns>CT_Temperature__c</columns>
        <columns>NVM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Borrowers</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>notEqual</operation>
            <value>Web,Tech Support Email,Zopa Loans,Collections Phone</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Borrowers</label>
        <sharedTo>
            <role>Customer_Service_Team_Lead</role>
            <role>Fraud_Underwriter</role>
            <role>UW_Team_Leader</role>
            <role>UW_Trainer_Coach</role>
            <role>Underwriter</role>
            <roleAndSubordinates>Application_Support_Team</roleAndSubordinates>
            <roleAndSubordinates>Borrower_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>Borrowers</roleAndSubordinates>
            <roleAndSubordinates>Case_Prep</roleAndSubordinates>
            <roleAndSubordinates>Client_Development_Team</roleAndSubordinates>
            <roleAndSubordinates>Client_Development_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>Complaints</roleAndSubordinates>
            <roleAndSubordinates>Data_Management</roleAndSubordinates>
            <roleAndSubordinates>Desktop_Support_Team</roleAndSubordinates>
            <roleAndSubordinates>Infrastructure_Lead</roleAndSubordinates>
            <roleAndSubordinates>Infrastructure_Team</roleAndSubordinates>
            <roleAndSubordinates>Investor</roleAndSubordinates>
            <roleAndSubordinates>Investor_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>Operations_Analyst</roleAndSubordinates>
            <roleAndSubordinates>Quality_Assurance</roleAndSubordinates>
            <roleAndSubordinates>Tech_Operations_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broken_Promise_to_Pay</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Process__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>Process__c</columns>
        <columns>ActivePPlan__c</columns>
        <columns>DefaultInAdmin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Process__c</field>
            <operation>equals</operation>
            <value>Broken Promise to Pay</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Broken Promise to Pay</label>
        <sharedTo>
            <roleAndSubordinates>Collections</roleAndSubordinates>
            <roleAndSubordinates>Collections_and_Recoveries_Team_Lead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Rating</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CT_Temperature__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CT_Rating__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>CT Rating</label>
        <sharedTo>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor_Team_Lead</role>
            <roleAndSubordinates>Application_Support_Team</roleAndSubordinates>
            <roleAndSubordinates>Borrower_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>Borrowers</roleAndSubordinates>
            <roleAndSubordinates>Case_Prep</roleAndSubordinates>
            <roleAndSubordinates>Client_Development_Team</roleAndSubordinates>
            <roleAndSubordinates>Client_Development_Team_Lead</roleAndSubordinates>
            <roleAndSubordinates>Complaints</roleAndSubordinates>
            <roleAndSubordinates>Data_Management</roleAndSubordinates>
            <roleAndSubordinates>Desktop_Support_Team</roleAndSubordinates>
            <roleAndSubordinates>Infrastructure_Lead</roleAndSubordinates>
            <roleAndSubordinates>Infrastructure_Team</roleAndSubordinates>
            <roleAndSubordinates>Investor</roleAndSubordinates>
            <roleAndSubordinates>Operations_Analyst</roleAndSubordinates>
            <roleAndSubordinates>Quality_Assurance</roleAndSubordinates>
            <roleAndSubordinates>Tech_Operations_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>